49
================

18/09/24 FindPet: tweaks based on API responses #1500
18/09/24 Add locale for Saudi Arabia
16/09/24 Publish options: exclude under should only allow integer weeks
16/09/24 ASK/VAR SITE missing from manual, and did not output as criteria
16/09/24 Online form: Set adoptable animal from querystring should set thumbnail
12/09/24 Fix animal type not being set to default by online forms with no type field
11/09/24 Fix saving blank values in publish_options
11/09/24 Fix bad performance clicking adoptable search from home page overview
11/09/24 Fix bad performance with multiple adoptable animal form fields
10/09/24 Squash the frequent mediaid=0 errors from document_media_edit.save
10/09/24 Rewrite post_data to use requests module instead #1500
09/09/24 Fix: Using multi-site broke mobile photo uploader
09/09/24 Prevent errors caused by figures reports with invalid years/months
09/09/24 Querybuilder: Add "Date of birth after" criteria for animals
09/09/24 Additional fields, strip breaking chars from lookup values
06/09/24 FindPet: Register a report before transfer if no report_id exists #1500
04/09/24 FindPet: Add config screen #1500
04/09/24 FindPet: Add support for deactivating reports for non-adoptions/death #1500
04/09/24 Bad ID for microchipdate2
01/09/24 Fix bad fieldname for second microchip number
31/08/24 PetFBI: Add columns for IntakeDate and PickupAddress
31/08/24 PetFBI: Only include stray holds, not strays separately from holds
31/08/24 Found->Animal, don't assign original owner, copy found area to entry
31/08/24 New lost/found animal not using default colour
28/08/24 Fix "undefined" appearing when no additional fields present #1103
28/08/24 Refactor health and identification #1103
23/08/24 PetFBI: switch to send stray/holds instead of adoptable animals
23/08/24 Refactor/simplify rendering of additional fields #1103
22/08/24 Export animals as CSV: Include ANIMALID column for cross referencing